graal-context-js engine (wip)